--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-cayman
 remote_theme: jekyll-theme-cayman
 title: Tation 的博客
 description: 记录学习与生活
+url: "https://TationZhao.github.io" # 显式指定域名
